tests/neg/i13091.scala


import annotation.experimental

@experimental class Foo

def test = (new Foo): Unit // error: class Foo is marked @experimental ...
